# tree-sitter-koala

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-koala.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_koala/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterkoala/: koala.h
bindings/swift/TreeSitterkoalaTests/: TreeSitterkoalaTests.swift
queries/: highlights.scm
queries/koala/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
